[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "toolrails"
version = "0.1.0"
description = "Valid tool calls from any local model. A drop-in OpenAI-compatible proxy for Ollama that guarantees well-formed tool calls and restores tool_choice."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Adam Danielsson", email = "the.adam.danielsson@gmail.com" }]
keywords = ["ollama", "tool-calling", "function-calling", "llm", "agent", "openai", "proxy", "local-llm", "structured-output"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: Libraries",
]
dependencies = [
  "starlette>=0.37",
  "uvicorn>=0.30",
  "httpx>=0.27",
  "jsonschema>=4.0",
]

[project.urls]
Homepage = "https://github.com/theadamdanielsson/toolrails"
Issues = "https://github.com/theadamdanielsson/toolrails/issues"

[project.scripts]
toolrails = "toolrails.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-asyncio>=0.23"]

[tool.hatch.build.targets.wheel]
packages = ["src/toolrails"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
